Fix visual alignment issues

--- a/root/static/css/defs.css
+++ b/root/static/css/defs.css
@@ -81,7 +81,7 @@ border-left: 1px solid #eee;
 }
 
 .navbar form {
-    margin: 0;
+    margin: 2px 0;
 }
 
 .paginator ul {
